--- a/.github/workflows/update-dockerfile.yml
+++ b/.github/workflows/update-dockerfile.yml
@@ -2,7 +2,7 @@ name: Watch Sage Docker image updates
 
 on:
   schedule:
-    - cron: '0 */6 * * *' # Run every 6 hours
+    - cron: '0 0 * * *'  # Run once every day
   workflow_dispatch:
 
 jobs:
@@ -41,5 +41,5 @@ jobs:
         git config --global user.email alice@wonderland
         git config --global user.name Alice
         git add Dockerfile
-        git commit -a -m "Update Dockerfile to use latest stable version of Sage"
-        git push -f origin
+        git commit --amend -m "Update Dockerfile for Sage ${SAGE_VERSION}"
+        git push -f origin master
