--- a/.github/workflows/update-dockerfile-dev.yml
+++ b/.github/workflows/update-dockerfile-dev.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
+      with:
+        ref: dev
 
     - name: Get SageMath Version
       id: get-version
@@ -37,9 +39,6 @@ jobs:
       run: |
         git config --global user.email alice@wonderland
         git config --global user.name Alice
-        git stash
-        git checkout dev
-        git stash pop
         git add Dockerfile
         git commit --amend -m "Update Dockerfile for Sage ${SAGE_VERSION}"
         git push -f origin dev
