--- a/.github/workflows/update-dockerfile-stable.yml
+++ b/.github/workflows/update-dockerfile-stable.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
+      with:
+        ref: master
 
     - name: Get SageMath Version
       id: get-version
