--- a/.github/workflows/update-dockerfile-stable.yml
+++ b/.github/workflows/update-dockerfile-stable.yml
@@ -18,16 +18,12 @@ jobs:
       with:
         ref: master
 
-    - name: Get SageMath Version
-      id: get-version
+    - name: Get SageMath version
       run: |
         SAGE_VERSION=$(docker run --rm $SAGE_DOCKER_LATEST /sage/sage --version | grep -oP 'SageMath version \K[0-9.]+(?:beta\d+)?')
         echo "SAGE_VERSION=${SAGE_VERSION}" >> $GITHUB_ENV
 
-    - name: Use SageMath Version
-      run: echo "The SageMath version is $SAGE_VERSION"
-
-    - name: Replace Docker Image Tag
+    - name: Replace Docker image tag
       run: |
         SAGE_IMAGE_NAME="${SAGE_DOCKER_LATEST%:latest}"
         NEW_IMAGE_NAME="${SAGE_IMAGE_NAME}:${SAGE_VERSION}"
