--- a/.github/workflows/update-dockerfile-stable.yml
+++ b/.github/workflows/update-dockerfile-stable.yml
@@ -32,8 +32,8 @@ jobs:
     - name: Update Dockerfile
       run: |
         SAGE_DOCKER_UPDATED_ESCAPED=$(echo "${SAGE_DOCKER_UPDATED}" | sed 's/\//\\\//g')
-        sed -i "s/FROM .*/FROM $SAGE_DOCKER_UPDATED_ESCAPED/g" Dockerfile
-        sed -i "s/FROM .*/FROM $SAGE_DOCKER_UPDATED_ESCAPED/g" README.rst
+        sed -i "s/FROM \S*/FROM $SAGE_DOCKER_UPDATED_ESCAPED/g" Dockerfile
+        sed -i "s/FROM \S*/FROM $SAGE_DOCKER_UPDATED_ESCAPED/g" README.rst
 
     - name: Commit changes
       run: |
