--- a/.github/Dockerfile
+++ b/.github/Dockerfile
@@ -1,7 +1,6 @@
-# Dockerfile for binder
-# Reference: https://mybinder.readthedocs.io/en/latest/tutorials/dockerfile.html
+# Multi-stage Dockerfile for slim Sage
+# https://docs.docker.com/build/building/multi-stage
 
-# Pull the Sage docker image
 FROM ghcr.io/sagemath/sage/sage-ubuntu-focal-standard-with-targets:latest AS target
 
 # Resolve symbolic links to recreate them later
@@ -12,20 +11,19 @@ FROM ghcr.io/sagemath/sage/sage-ubuntu-focal-standard-with-system-packages:lates
 
 USER root
 
-# These lines are here to remove warnings
+# Remove warnings
 ENV DEBIAN_FRONTEND noninteractive
 ENV DEBCONF_NOWARNINGS="yes"
 
-# Install jupyterlab to the system
+# Install JupyterLab to the system
 RUN apt-get update
 RUN apt-get install -y python3-pip
-RUN python3 -m pip install --no-warn-script-location notebook jupyterlab
-RUN python3 -m pip install --no-warn-script-location ipywidgets
+RUN python3 -m pip install --no-warn-script-location notebook jupyterlab ipywidgets
 
 # Disable annoying pupup for Jupyter news
 RUN jupyter labextension disable "@jupyterlab/apputils-extension:announcements"
 
-# Install /sage
+# Install /sage from target
 COPY --from=target /sage/src/bin /sage/src/bin
 COPY --from=target /sage/src/sage /sage/src/sage
 COPY --from=target /sage/local /sage/local
@@ -38,8 +36,8 @@ COPY --from=target /sage/venv_link /sage/venv_link
 RUN ln -s $(cat /sage/prefix_link) /sage/prefix && rm /sage/prefix_link
 RUN ln -s $(cat /sage/venv_link) /sage/venv && rm /sage/venv_link
 
-# Remove built doc
-#RUN rm -R /sage/local/share/doc
+# Remove Sage doc
+RUN rm -R /sage/local/share/doc
 
 # Configure Sage library
 RUN /sage/sage -pip install --root-user-action=ignore /sage/pkgs/sage-conf
