--- a/.github/Dockerfile
+++ b/.github/Dockerfile
@@ -26,7 +26,7 @@ RUN jupyter labextension disable "@jupyterlab/apputils-extension:announcements"
 # Install /sage from target
 COPY --from=target /sage/src/bin /sage/src/bin
 COPY --from=target /sage/src/sage /sage/src/sage
-COPY --from=target /sage/local /sage/local
+COPY --from=target --exclude=/sage/local/share/doc/** /sage/local /sage/local
 COPY --from=target /sage/sage /sage/sage
 COPY --from=target /sage/pkgs/sage-conf /sage/pkgs/sage-conf
 
